# RaceCarPlannerCpp

./: CMakeLists.txt  main.cpp  test.h
curve/: curve.py
curve_fitting/: curve_fitting.py  dynamics_0.txt  dynamics_1.txt  dynamics_2.txt
data/map/: map.dxf  refined_obstacle.txt  sst_data.txt  test_map.xml
data/params/: planner.json  racecar.json  racecar_nwh.yaml  sst_test_racecar.json
data/tracks/: temp.csv  temp_nwh.yaml  temp_nwh_half.csv
include/chassis/: axle.hpp  chassis.hpp
include/dynamics/: dynamics.hpp
include/global_planner/: global_planner.hpp  global_planner_bicycle_kinematic_arc.hpp  global_planner_optimizer.hpp  global_planner_plot.hpp  global_planner_track.hpp  global_trajectory.hpp  path_preprocessor.hpp  waypoints_processor.hpp
include/local_planner/: local_planner.hpp
include/map/: shape.hpp  test_map.hpp
include/sst/: array_adaptor.hpp  node_adaptor.hpp  planner.hpp  sst.hpp  tree_node.hpp
include/track/: bezier.hpp  path.hpp  rtree.hpp  track.hpp
include/utility/: csv_reader.hpp  db_manager.hpp  utility.hpp
include/vehicle/: bicycle_kinematic.hpp  bicycle_kinematic_arc.hpp  dynamics.hpp
include/wheel/: tire_model.hpp  wheel.hpp
local_planner/: local_planner.hpp
output/: global_planner.db
test/: get_waypoint_from_unity.cpp  global_planner_test.cpp  sst_test.cpp  track_test.cpp  unity_controller_test.cpp
unity_controller/include/: unity_controller.hpp  websocket_server.hpp
waypoints_refine/: acsr_geometry.py  waypoints.py
